# bookops-bpl-solr

./: .gitignore  .travis.yml  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: unit-tests.yaml
bookops_bpl_solr/: __init__.py  session.py
tests/: conftest.py  response-example-ebok.json  response-example-print.json  test_bookops_bpl_solr.py  test_session.py
