[tool.poetry]
name = "bookops-bpl-solr"
version = "0.4.0"
description = "BookOps Python wrapper around BPL Solr service."
license = "MIT"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
readme = "README.md"

keywords = ["api", "cataloging", "bibliographic records", "library metadata", "bpl"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^22.1.0"
mypy = "^0.961"
types-requests = "^2.28.0"

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
